--- a/index.html
+++ b/index.html
@@ -1,31 +1,62 @@
-
 <!DOCTYPE html>
-
 <html>
 
 <head>
+  <title>Quest Store</title>
+  
+  <meta charset="UTF-8">
+  <meta name="description" content="Quest Store">
+  <meta name="keywords" content="Codecool, Quest Store">
+  <meta name="author" content="John Doe">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <link rel="stylesheet" href="css/style.css">
 
-    <title>Quest Store</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet"> 
-    
+  <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
+  
+  <script>
+    function openSlideMenu() {
+      document.getElementById('menu').style.width = '250px';
+      document.getElementById('content').style.marginLeft = '258px';
+    }
+    function closeSlideMenu() {
+      document.getElementById('menu').style.width = '0';
+      document.getElementById('content').style.marginLeft = '8px';
+    }
+  </script>
+
 </head>
 
 <body>
-    <h1>Quest Store</h1> 
-    <div id="logo">
-        <img src="images/logo.png" alt="Logo" width="527" height="444"> 
-    </div>
+
+  <header>
+    <a id="hamburgerMenu" href="#" onclick="openSlideMenu()">
+      <i class="fas fa-bars"></i>
+    </a>
+    <img id="image" src="images/logo.png">
+    <a id="user" href="#">
+      <i class="far fa-user-circle"></i>
+    </a>
+    <a id="signOut" href="#">
+      <i class="fas fa-sign-out-alt"></i>
+    </a>
+  </header>
+
+  <div id="content">
     
-    <div class="container">
-        <div class="menu">
-            <div class="buttons">
-            <input type="text" name="email" placeholder="email" required>
-            <input type="text" name="password" placeholder="password" required>
-            <input type="submit" value="Sign in"><br>
-            <input type="submit" value="Sign up">
-            </div>
-        </div>
+    <div id="menu" class="nav">
+      <a href="#" class="close" onclick="closeSlideMenu()">
+        <i class="fas fa-times"></i>
+      </a>
+      <a href="#">menu1</a>
+      <a href="#">menu2</a>
+      <a href="#">menu3</a>
     </div>
+
+    <h1>content</h1>
+
+  </div>
+
 </body>
+
 </html>
