flexing in progress

--- a/login.html
+++ b/login.html
@@ -9,22 +9,28 @@
     <meta name="author" content="Mikolaj">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="css/style.css">
-
+    <link rel="stylesheet" href="css/login.css">
+    <script src="script.js" defer></script>
 </head>
 
 <body>
-<p id="demo"></p>
-<script>
-    function myFunction() {
-        document.getElementById("demo").innerHTML = "confirm pass";
-    }
-</script>
 
-<img id="image" src="images/logo.png">
-<p><input type="text" name="e-mail" value="E-mail address"></p>
-<p><input type="text" name="password" value="Password"></p>
-<button class="login">Sign in</button>
-<button onclick="myFunction()">Sign up</button>
+<div>
+
+
+    <img id="image" src="images/logo.png">
+
+    <input type="text" name="e-mail" value="E-mail address">
+
+    <input type="text" name="password" value="Password">
+
+    <div class="container">
+      <input type="text" name="confirm password" value="Confirm password">
+      <button class="login">Sign in</button>
+    </div>
+
+    <button onclick="myFunction()">Sign up</button>
+
+</div>
 </body>
 </html>
