testing section tag

--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
 
 <body>
 
-<div>
+<section>
 
 
     <img id="image" src="images/logo.png">
@@ -32,6 +32,6 @@
 
     <button onclick="myFunction()">Sign up</button>
 
-</div>
+</section>
 </body>
 </html>
