--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <img id="image" src="images/logo.png">
+    <img class="image" src="images/logo.png">
 <section>
     <input type="text" name="e-mail" value="E-mail address">
     <input type="text" name="password" value="Password">
