--- a/login.html
+++ b/login.html
@@ -19,9 +19,9 @@
     <input type="text" name="password" value="Password">
     <div class="container">
       <input type="text" name="confirm password" value="Confirm password">
-      <button class="login">Sign in</button>
+      <button class="submit" class="login">Sign in</button>
     </div>
-    <button onclick="myFunction()">Sign up</button>
+    <button class="submit" onclick="myFunction()">Sign up</button>
 </section>
 </body>
 </html>
