added flex properties to body

--- a/login.html
+++ b/login.html
@@ -18,8 +18,8 @@
     <input type="text" name="e-mail" value="E-mail address">
     <input type="text" name="password" value="Password">
     <div class="container">
-      <input type="text" name="confirm password" value="Confirm password">
-      <button class="submit" class="login">Sign in</button>
+      <input class="inside" class="hide" type="text" name="confirm password" value="Confirm password">
+      <button class="inside" class="submit" class="login">Sign in</button>
     </div>
     <button class="submit" onclick="myFunction()">Sign up</button>
 </section>
