--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Codecool, Login">
     <meta name="author" content="Mikolaj">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/login.css">
     <script src="script.js" defer></script>
 </head>
