--- a/mentorView.html
+++ b/mentorView.html
@@ -51,11 +51,28 @@
     <div class="students">
             <div class="wholeSearch">
                 <input class="search" type="text" name="surname" value="Surname">
-                <button class="button">search</button>
+                <button class="button"><i class="fas fa-search"></i>
+                </button>
             </div>
-
-            <button class="button" class="addStudent">add new student</button>
+        <button class="button" class="addStudent"><i class="fas fa-trash-alt"></i></button>
+        <button class="button" class="addStudent"><i class="fas fa-arrow-up"></i></button>
+            <button class="button" class="addStudent"><i class="fas fa-plus"></i></button>
     </div>
+<div class="belowContent">
+    <section class="listOfStudents">
+        <div class="singleStudent"><p class="studentText">  1. Mikolaj Urbanek</p></div>
+        <div class="singleStudent"><p class="studentText">  2. Marta Skarbek   </p></div>
+        <div class="singleStudent"><p class="studentText">  3. Patryk Król    </p></div>
+        <div class="singleStudent"><p class="studentText">  4. Tomasz Krogulec    </p></div>
+    </section>
+
+    <div class="formula">
+        <input class="update"  type="text" name="surname" value="Surname">
+        <input class="update"  type="text" name="name" value="Name">
+        <input class="update"  type="text" name="age" value="Age">
+    </div>
+</div>
+
     <div class="store">
         <p>lala</p>
     </div>
