fix basic view of page

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
     <div class="topBarButtons" id="topBarButton">
       <a id="user" href="userView.html">
         <i class="far fa-user-circle"></i>
-        user
+        Codecooler
       </a>
       <a id="signOut" href="login.html">
         <i class="fas fa-sign-out-alt"></i>
-        sign out
+        Log out
       </a>
     </div>
   </header>
@@ -51,9 +51,9 @@
       <a href="#" class="close" onclick="closeSlideMenu()">
         <i class="fas fa-times"></i>
       </a>
-      <a href="#">menu1</a>
-      <a href="#">menu2</a>
-      <a href="#">menu3</a>
+      <a href="wallet.html">Wallet</a>
+      <a href="shop.html">Shop</a>
+      <a href="quests.html">Quests</a>
     </div>
 
     <h1>content</h1>
