--- a/userView.html
+++ b/userView.html
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/user-view.css">
 
     <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
 
@@ -38,11 +39,11 @@
         <div class="topBarButtons" id="topBarButton">
             <a id="user" href="userView.html">
                 <i class="far fa-user-circle"></i>
-                user
+                Codecooler
             </a>
             <a id="signOut" href="login.html">
                 <i class="fas fa-sign-out-alt"></i>
-                sign out
+                Log out
             </a>
         </div>
 </header>
@@ -52,9 +53,9 @@
         <a href="#" class="close" onclick="closeSlideMenu()">
             <i class="fas fa-times"></i>
         </a>
-        <a href="#">menu1</a>
-        <a href="#">menu2</a>
-        <a href="#">menu3</a>
+        <a href="wallet.html">Wallet</a>
+        <a href="shop.html">Shop</a>
+        <a href="quests.html">Quests</a>
     </div>
     <div class="card-container">
         <img
