added closing tag

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
 
   <header>
-    <a id="hamburgerMenu" href="#" onclick="openSlideMenu()">
+    <a id="hamburgerMenu" href="#" onclick="openSlideMenu()"></a>
       <i class="fas fa-bars"></i>
     <a href="index.html">
       <img id="image" src="images/logo.png">
