added script from html files to script.js file

--- a/quests.html
+++ b/quests.html
@@ -19,15 +19,7 @@
             <link rel="stylesheet" href="css/quests.css">
 
             <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
-
-            <script>
-                function openSlideMenu() {
-                    document.getElementById('menu').style.width = '250px';
-                }
-                function closeSlideMenu() {
-                    document.getElementById('menu').style.width = '0';
-                }
-            </script>
+            <script src="script.js" defer></script>
 
         </head>
 
