--- a/index.html
+++ b/index.html
@@ -9,19 +9,9 @@
   <meta name="keywords" content="Codecool, Quest Store">
   <meta name="author" content="John Doe">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
   <link rel="stylesheet" href="css/style.css">
-
   <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
-  
-  <script>
-    function openSlideMenu() {
-      document.getElementById('menu').style.width = '250px';
-    }
-    function closeSlideMenu() {
-      document.getElementById('menu').style.width = '0';
-    }
-  </script>
+  <script src="script.js" defer></script>
 
 </head>
 
