--- a/mentors.html
+++ b/mentors.html
@@ -12,19 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/creep.css">
-
     <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
-
-    <script>
-        function openSlideMenu() {
-            document.getElementById('menu').style.width = '250px';
-            // document.getElementById('content').style.marginLeft = '258px';
-        }
-        function closeSlideMenu() {
-            document.getElementById('menu').style.width = '0';
-            // document.getElementById('content').style.marginLeft = '8px';
-        }
-    </script>
+    <script src="script.js" defer></script>
 
 </head>
 
