--- a/shop.html
+++ b/shop.html
@@ -9,21 +9,11 @@
     <meta name="keywords" content="Codecool, Quest Store">
     <meta name="author" content="John Doe">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/wallet.css">
     <link rel="stylesheet" href="css/shop.css">
-
     <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
-
-    <script>
-        function openSlideMenu() {
-            document.getElementById('menu').style.width = '250px';
-        }
-        function closeSlideMenu() {
-            document.getElementById('menu').style.width = '0';
-        }
-    </script>
+    <script src="script.js" defer></script>
 
 </head>
 
