added badges price tag to the cards

--- a/shop.html
+++ b/shop.html
@@ -32,6 +32,7 @@
 <header>
     <a id="hamburgerMenu" href="#" onclick="openSlideMenu()">
         <i class="fas fa-bars"></i>
+    </a>
         <a href="index.html">
             <img id="image" src="images/logo.png">
         </a>
@@ -62,8 +63,8 @@
 
         <div class="cards-container">
             <div class="artifact-card">
-                <div class="price">
-                    2$
+                <div class="price-tag">
+                    2.5$
                 </div>
                 <img src="images/photo.png">
                 <h2>Name of artifact</h2>
@@ -74,8 +75,8 @@
                 </div>
             </div>
             <div class="artifact-card">
-                <div class="price">
-                    2$
+                <div class="price-tag">
+                    11$
                 </div>
                 <img src="images/photo.png">
                 <h2>Name of artifact</h2>
@@ -86,8 +87,8 @@
                 </div>
             </div>
             <div class="artifact-card">
-                <div class="price">
-                    2$
+                <div class="price-tag">
+                    199$
                 </div>
                 <img src="images/photo.png">
                 <h2>Name of artifact</h2>
@@ -98,7 +99,7 @@
                 </div>
             </div>
             <div class="artifact-card">
-                <div class="price">
+                <div class="price-tag">
                     2$
                 </div>
                 <img id="artifact-photo" src="images/photo.png">
