--- a/quests.html
+++ b/quests.html
@@ -17,6 +17,8 @@
             <link rel="stylesheet" href="css/style.css">
             <link rel="stylesheet" href="css/wallet.css">
             <link rel="stylesheet" href="css/quests.css">
+            <link rel="stylesheet" href="css/shop.css">
+
 
             <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
 
@@ -65,8 +67,20 @@
     <div id="inner-content">
 
         <div class="cards-container">
-            <div class="artifact-card">
-                <div class="price">
+            <div class="quest-card">
+                <div class="price-tag">
+                    9$
+                </div>
+                <img src="images/photo.png">
+                <h2>Name of quest</h2>
+                <div class="description">
+                    Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
+                    sit amet pulvinar. Maecenas tempus odio ut hendrerit ullamcorper. Pellentesque quis diam erat.
+                    Donec imperdiet blandit odio et finibus. Suspendisse dictum rhoncus diam, id tincidunt urna
+                </div>
+            </div>
+            <div class="quest-card">
+                <div class="price-tag">
                     2$
                 </div>
                 <img src="images/photo.png">
@@ -77,9 +91,9 @@
                     Donec imperdiet blandit odio et finibus. Suspendisse dictum rhoncus diam, id tincidunt urna
                 </div>
             </div>
-            <div class="artifact-card">
-                <div class="price">
-                    2$
+            <div class="quest-card">
+                <div class="price-tag">
+                    100$
                 </div>
                 <img src="images/photo.png">
                 <h2>Name of quest</h2>
@@ -89,21 +103,9 @@
                     Donec imperdiet blandit odio et finibus. Suspendisse dictum rhoncus diam, id tincidunt urna
                 </div>
             </div>
-            <div class="artifact-card">
-                <div class="price">
-                    2$
-                </div>
-                <img src="images/photo.png">
-                <h2>Name of quest</h2>
-                <div class="description">
-                    Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
-                    sit amet pulvinar. Maecenas tempus odio ut hendrerit ullamcorper. Pellentesque quis diam erat.
-                    Donec imperdiet blandit odio et finibus. Suspendisse dictum rhoncus diam, id tincidunt urna
-                </div>
-            </div>
-            <div class="artifact-card">
-                <div class="price">
-                    2$
+            <div class="quest-card">
+                <div class="price-tag">
+                    22$
                 </div>
                 <img id="artifact-photo" src="images/photo.png">
                 <h2>Name of quest</h2>
