--- a/quests.html
+++ b/quests.html
@@ -1,45 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Quest Store</title>
+
     <meta charset="UTF-8">
-    <title><!DOCTYPE html>
-        <html lang="eng">
+    <meta name="description" content="Quest Store">
+    <meta name="keywords" content="Codecool, Quest Store">
+    <meta name="author" content="John Doe">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <head>
-            <title>Quest Store</title>
-
-            <meta charset="UTF-8">
-            <meta name="description" content="Quest Store">
-            <meta name="keywords" content="Codecool, Quest Store">
-            <meta name="author" content="John Doe">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-            <link rel="stylesheet" href="css/style.css">
-            <link rel="stylesheet" href="css/wallet.css">
-            <link rel="stylesheet" href="css/quests.css">
-            <link rel="stylesheet" href="css/shop.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/wallet.css">
+    <link rel="stylesheet" href="css/quests.css">
+    <link rel="stylesheet" href="css/shop.css">
 
 
-            <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
 
-            <script>
-                function openSlideMenu() {
-                    document.getElementById('menu').style.width = '250px';
-                }
-                function closeSlideMenu() {
-                    document.getElementById('menu').style.width = '0';
-                }
-            </script>
+    <script>
+        function openSlideMenu() {
+            document.getElementById('menu').style.width = '250px';
+        }
 
-        </head>
+        function closeSlideMenu() {
+            document.getElementById('menu').style.width = '0';
+        }
+    </script>
+
+</head>
 
 <body>
 
 <header>
     <a id="hamburgerMenu" href="#" onclick="openSlideMenu()">
         <i class="fas fa-bars"></i>
+    </a>
         <a href="index.html">
-            <img id="image" src="images/logo.png">
+            <img id="image" src="images/logo.png" alt="">
         </a>
         <div class="topBarButtons" id="topBarButton">
             <a id="user" href="userView.html">
@@ -71,7 +68,7 @@
                 <div class="price-tag">
                     9$
                 </div>
-                <img src="images/photo.png">
+                <img src="images/photo.png" alt="">
                 <h2>Name of quest</h2>
                 <div class="description">
                     Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
@@ -83,7 +80,7 @@
                 <div class="price-tag">
                     2$
                 </div>
-                <img src="images/photo.png">
+                <img src="images/photo.png" alt="">
                 <h2>Name of quest</h2>
                 <div class="description">
                     Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
@@ -95,7 +92,7 @@
                 <div class="price-tag">
                     100$
                 </div>
-                <img src="images/photo.png">
+                <img src="images/photo.png" alt="">
                 <h2>Name of quest</h2>
                 <div class="description">
                     Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
@@ -107,7 +104,7 @@
                 <div class="price-tag">
                     22$
                 </div>
-                <img id="artifact-photo" src="images/photo.png">
+                <img id="artifact-photo" src="images/photo.png" alt="">
                 <h2>Name of quest</h2>
                 <div class="description">
                     Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
@@ -120,9 +117,4 @@
 </div>
 </body>
 
-</html></title>
-</head>
-<body>
-
-</body>
 </html>
