--- a/login.html
+++ b/login.html
@@ -9,11 +9,11 @@
     <meta name="author" content="Mikolaj">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="Public/css/login.css">
     <script src="script.js" defer></script>
 </head>
 <body>
-    <img class="image" src="images/logo.png">
+    <img class="image" src="Public/images/logo.png">
 <section>
     <input type="text" name="e-mail" value="E-mail address">
     <input type="text" name="password" value="Password">
