--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="Codecool, Quest Store">
   <meta name="author" content="John Doe">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="Public/css/style.css">
   <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
   <script src="script.js" defer></script>
 
@@ -22,7 +22,7 @@
       <i class="fas fa-bars"></i>
     </a>
     <a href="index.html">
-      <img id="image" src="images/logo.png" alt="">
+      <img id="image" src="Public/images/logo.png">
     </a>
     <div class="topBarButtons" id="topBarButton">
       <a id="user" href="userView.html">
