--- a/mentors.html
+++ b/mentors.html
@@ -10,8 +10,8 @@
     <meta name="author" content="John Doe">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/creep.css">
+    <link rel="stylesheet" href="Public/css/style.css">
+    <link rel="stylesheet" href="Public/css/creep.css">
     <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
 
@@ -23,7 +23,7 @@
     <a id="hamburgerMenu" href="#" onclick="openSlideMenu()">
         <i class="fas fa-bars"></i>
         <a href="manageAccounts.html">
-            <img id="image" src="images/logo.png">
+            <img id="image" src="Public/images/logo.png">
         </a>
         <div class="topBarButtons" id="topBarButton">
             <a id="user" href="userView.html">
