--- a/shop.html
+++ b/shop.html
@@ -9,9 +9,9 @@
     <meta name="keywords" content="Codecool, Quest Store">
     <meta name="author" content="John Doe">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/wallet.css">
-    <link rel="stylesheet" href="css/shop.css">
+    <link rel="stylesheet" href="Public/css/style.css">
+    <link rel="stylesheet" href="Public/css/wallet.css">
+    <link rel="stylesheet" href="Public/css/shop.css">
     <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
 
@@ -24,7 +24,7 @@
         <i class="fas fa-bars"></i>
     </a>
         <a href="index.html">
-            <img id="image" src="images/logo.png">
+            <img id="image" src="Public/images/logo.png">
         </a>
         <div class="topBarButtons" id="topBarButton">
             <a id="user" href="userView.html">
@@ -56,7 +56,7 @@
                 <div class="price-tag">
                     2.5$
                 </div>
-                <img src="images/photo.png">
+                <img src="Public/images/photo.png">
                 <h2>Name of artifact</h2>
                 <div class="description">
                     Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
@@ -68,7 +68,7 @@
                 <div class="price-tag">
                     11$
                 </div>
-                <img src="images/photo.png">
+                <img src="Public/images/photo.png">
                 <h2>Name of artifact</h2>
                 <div class="description">
                     Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
@@ -80,7 +80,7 @@
                 <div class="price-tag">
                     199$
                 </div>
-                <img src="images/photo.png">
+                <img src="Public/images/photo.png">
                 <h2>Name of artifact</h2>
                 <div class="description">
                     Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
