--- a/userView.html
+++ b/userView.html
@@ -10,8 +10,8 @@
     <meta name="author" content="John Doe">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/user-view.css">
+    <link rel="stylesheet" href="Public/css/style.css">
+    <link rel="stylesheet" href="Public/css/user-view.css">
 
     <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
 
@@ -27,7 +27,7 @@
     <a id="hamburgerMenu" href="#" onclick="openSlideMenu()">
         <i class="fas fa-bars"></i>
         <a href="index.html">
-            <img id="image" src="images/logo.png">
+            <img id="image" src="Public/images/logo.png">
         </a>
         <div class="topBarButtons" id="topBarButton">
             <a id="user" href="userView.html">
