--- a/wallet.html
+++ b/wallet.html
@@ -9,8 +9,8 @@
         <meta name="keywords" content="Codecool, Quest Store">
         <meta name="author" content="John Doe">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/wallet.css">
+        <link rel="stylesheet" href="Public/css/style.css">
+        <link rel="stylesheet" href="Public/css/wallet.css">
         <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
         <script src="script.js" defer></script>
 
@@ -22,7 +22,7 @@
             <a id="hamburgerMenu" href="#" onclick="openSlideMenu()">
             <i class="fas fa-bars"></i>
             <a href="index.html">
-                <img id="image" src="images/logo.png">
+                <img id="image" src="Public/images/logo.png">
             </a>
             <div class="topBarButtons" id="topBarButton">
                 <a id="user" href="userView.html">
@@ -59,7 +59,7 @@
 
                 <div class="cards-container">
                     <div class="artifact-card">
-                        <img src="images/photo.png">
+                        <img src="Public/images/photo.png">
                         <h2>Name of artifact</h2>
                         <div class="description">
                             Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
@@ -68,7 +68,7 @@
                         </div>
                     </div>
                     <div class="artifact-card">
-                        <img src="images/photo.png">
+                        <img src="Public/images/photo.png">
                         <h2>Name of artifact</h2>
                         <div class="description">
                             Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                     <div class="artifact-card">
-                        <img src="images/photo.png">
+                        <img src="Public/images/photo.png">
                         <h2>Name of artifact</h2>
                         <div class="description">
                             Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
