changed section to form

--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <img class="image" src="Public/images/logo.png">
-<section>
+<form>
     <input type="text" name="e-mail" value="E-mail address">
     <input type="text" name="password" value="Password">
     <div class="container">
@@ -22,6 +22,6 @@
       <button class="inside" class="submit" class="login">Sign in</button>
     </div>
     <button class="submit" onclick="myFunction()">Sign up</button>
-</section>
+</form>
 </body>
 </html>
