repaired fields to js file

--- a/mentors.html
+++ b/mentors.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="Public/css/style.css">
     <link rel="stylesheet" href="Public/css/creep.css">
     <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
-    <script src="script.js" defer></script>
+    <script src="Public/script.js" defer></script>
 
 </head>
 
