--- a/quests.html
+++ b/quests.html
@@ -21,15 +21,7 @@
             <link rel="stylesheet" href="Public/css/wallet.css">
             <link rel="stylesheet" href="Public/css/quests.css">
 
-    <script>
-        function openSlideMenu() {
-            document.getElementById('menu').style.width = '250px';
-        }
-
-        function closeSlideMenu() {
-            document.getElementById('menu').style.width = '0';
-        }
-    </script>
+    <script src="Public/script.js" defer></script>
 </head>
 
 <body>
@@ -37,19 +29,14 @@
 <header>
     <a id="hamburgerMenu" href="#" onclick="openSlideMenu()">
         <i class="fas fa-bars"></i>
-<<<<<<< Updated upstream
     </a>
     <a href="index.html">
-        <img id="image" src="images/logo.png" alt="">
+        <img id="image" src="Public/images/logo.png" alt="">
     </a>
     <div class="topBarButtons" id="topBarButton">
         <a id="user" href="userView.html">
             <i class="far fa-user-circle"></i>
             Codecooler
-=======
-        <a href="index.html">
-            <img id="image" src="Public/images/logo.png">
->>>>>>> Stashed changes
         </a>
         <a id="signOut" href="login.html">
             <i class="fas fa-sign-out-alt"></i>
@@ -76,11 +63,7 @@
                 <div class="price-tag">
                     9$
                 </div>
-<<<<<<< Updated upstream
-                <img src="images/photo.png" alt="">
-=======
                 <img src="Public/images/photo.png">
->>>>>>> Stashed changes
                 <h2>Name of quest</h2>
                 <div class="description">
                     Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
@@ -92,7 +75,7 @@
                 <div class="price-tag">
                     2$
                 </div>
-                <img src="images/photo.png" alt="">
+                <img src="Public/images/photo.png" alt="">
                 <h2>Name of quest</h2>
                 <div class="description">
                     Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
@@ -104,11 +87,7 @@
                 <div class="price-tag">
                     100$
                 </div>
-<<<<<<< Updated upstream
-                <img src="images/photo.png" alt="">
-=======
                 <img src="Public/images/photo.png">
->>>>>>> Stashed changes
                 <h2>Name of quest</h2>
                 <div class="description">
                     Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
