--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="Public/css/style.css">
   <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
-  <script src="script.js" defer></script>
+  <script src="Public/script.js" defer></script>
 
 </head>
 
