--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="Public/css/login.css">
-    <script src="script.js" defer></script>
+    <script src="Public/script.js" defer></script>
 </head>
 <body>
     <img class="image" src="Public/images/logo.png">
