--- a/mentorView.html
+++ b/mentorView.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Public/css/mentor.css">
     <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
-    <script src="script.js" defer></script>
+    <script src="Public/script.js" defer></script>
 
 </head>
 
