--- a/shop.html
+++ b/shop.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="Public/css/wallet.css">
     <link rel="stylesheet" href="Public/css/shop.css">
     <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
-    <script src="script.js" defer></script>
+    <script src="Public/script.js" defer></script>
 
 </head>
 
@@ -24,7 +24,7 @@
         <i class="fas fa-bars"></i>
     </a>
         <a href="index.html">
-            <img id="image" src="Public/images/logo.png">
+            <img id="Public/image" src="Public/images/logo.png">
         </a>
         <div class="topBarButtons" id="topBarButton">
             <a id="user" href="userView.html">
@@ -92,7 +92,7 @@
                 <div class="price-tag">
                     2$
                 </div>
-                <img id="artifact-photo" src="images/photo.png">
+                <img id="artifact-photo" src="Public/images/photo.png">
                 <h2>Name of artifact</h2>
                 <div class="description">
                     Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
