--- a/userView.html
+++ b/userView.html
@@ -14,10 +14,7 @@
     <link rel="stylesheet" href="Public/css/user-view.css">
 
     <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
-
-    <script>
-
-    </script>
+    <script src="Public/script.js" defer></script>
 
 </head>
 
@@ -27,7 +24,7 @@
     <a id="hamburgerMenu" href="#" onclick="openSlideMenu()">
         <i class="fas fa-bars"></i>
         <a href="index.html">
-            <img id="image" src="Public/images/logo.png">
+            <img id="Public/image" src="Public/images/logo.png">
         </a>
         <div class="topBarButtons" id="topBarButton">
             <a id="user" href="userView.html">
