--- a/wallet.html
+++ b/wallet.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="Public/css/style.css">
         <link rel="stylesheet" href="Public/css/wallet.css">
         <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
-        <script src="script.js" defer></script>
+        <script src="Public/script.js" defer></script>
 
     </head>
 
@@ -22,7 +22,7 @@
             <a id="hamburgerMenu" href="#" onclick="openSlideMenu()">
             <i class="fas fa-bars"></i>
             <a href="index.html">
-                <img id="image" src="Public/images/logo.png">
+                <img id="Public/image" src="Public/images/logo.png">
             </a>
             <div class="topBarButtons" id="topBarButton">
                 <a id="user" href="userView.html">
