--- a/quests.html
+++ b/quests.html
@@ -9,10 +9,10 @@
     <meta name="author" content="John Doe">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/wallet.css">
-    <link rel="stylesheet" href="css/quests.css">
-    <link rel="stylesheet" href="css/shop.css">
+    <link rel="stylesheet" href="Public/css/style.css">
+    <link rel="stylesheet" href="Public/css/wallet.css">
+    <link rel="stylesheet" href="Public/css/quests.css">
+    <link rel="stylesheet" href="Public/css/shop.css">
 
 
     <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
@@ -99,7 +99,7 @@
                 <div class="price-tag">
                     22$
                 </div>
-                <img id="artifact-photo" src="images/photo.png" alt="">
+                <img src="Public/images/photo.png" alt="">
                 <h2>Name of quest</h2>
                 <div class="description">
                     Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
