fixed login html

--- a/login.html
+++ b/login.html
@@ -1,3 +1,4 @@
+
 <!HTML5 html>
 <html>
 <head>
@@ -8,20 +9,20 @@
     <meta name="keywords" content="Codecool, Login">
     <meta name="author" content="Mikolaj">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Public/css/login.css">
     <script src="Public/script.js" defer></script>
 </head>
 <body>
-    <img class="image" src="Public/images/logo.png">
-<form>
+<img class="image" src="Public/images/logo.png">
+<section>
     <input type="text" name="e-mail" value="E-mail address">
     <input type="text" name="password" value="Password">
     <div class="container">
-      <input class="inside" class="hide" type="text" name="confirm password" value="Confirm password">
-      <button class="inside" class="submit" class="login">Sign in</button>
+        <input class="inside" class="hide" type="text" name="confirm password" value="Confirm password">
+        <button class="inside" class="submit" class="login">Sign in</button>
     </div>
     <button class="submit" onclick="myFunction()">Sign up</button>
-</form>
+</section>
 </body>
 </html>
