--- a/mentors.html
+++ b/mentors.html
@@ -43,7 +43,7 @@
             <i class="fas fa-times"></i>
         </a>
         <a href="manageAccounts.html">Manage accounts</a>
-        <a href="#">Classes</a>
+        <a href="classes.html">Classes</a>
     </div>
 </div>
 <a href="students.html" class="button">Students -></a>
