--- a/students.html
+++ b/students.html
@@ -42,7 +42,7 @@
             <i class="fas fa-times"></i>
         </a>
         <a href="manageAccounts.html">Manage accounts</a>
-        <a href="#">Classes</a>
+        <a href="classes.html">Classes</a>
     </div>
 </div>
 <a href="mentors.html" class="button">Mentors -></a>
@@ -59,6 +59,7 @@
               <th>Email</th>
               <th>Phone number</th>
               <th>Class</th>
+              <th>Profile</th>
               <th>Edit</th>
             </tr>
           </thead>
@@ -69,6 +70,9 @@
               <td>tomek.krogulec@gmail.com</td>
               <td>123456789</td>
               <td>WEB/CSS/JS</td>
+              <td>
+                <span class="profile"><a href="#!"><i class="far fa-user"></i></a></span>
+              </td>
               <td>
                 <span class="edit-row"><a href="#!"><i class="far fa-edit"></i></a></span>
               </td>
@@ -82,6 +86,9 @@
               <td>patryk.krol@gmail.com</td>
               <td>987654321</td>
               <td>WEB/CSS/JS</td>
+              <td>
+                <span class="profile"><a href="#!"><i class="far fa-user"></i></a></span>
+              </td>
               <td>
                 <span class="edit-row"><a href="#!"><i class="far fa-edit"></i></a></span>
               </td>
