--- a/classes.html
+++ b/classes.html
@@ -18,23 +18,24 @@
 
 <body>
 
-<header>
-    <a id="hamburgerMenu" href="#" onclick="openSlideMenu()">
-        <i class="fas fa-bars"></i>
-        <a href="manageAccounts.html">
-            <img id="image" src="Public/images/logo.png">
+    <header>
+        <a id="hamburgerMenu" href="#" onclick="openSlideMenu()">
+            <i class="fas fa-bars"></i>
+        </a>
+        <a href="index.html">
+            <img id="Public/image" src="Public/images/logo.png">
         </a>
         <div class="topBarButtons" id="topBarButton">
             <a id="user" href="userView.html">
                 <i class="far fa-user-circle"></i>
-                user
+                Codecooler
             </a>
             <a id="signOut" href="login.html">
                 <i class="fas fa-sign-out-alt"></i>
-                sign out
+                Log out
             </a>
         </div>
-</header>
+    </header>
 
 <h1>Classes</h1>
 
