--- a/mentors.html
+++ b/mentors.html
@@ -19,22 +19,23 @@
 
 <body>
 
-<header>
+  <header>
     <a id="hamburgerMenu" href="#" onclick="openSlideMenu()">
         <i class="fas fa-bars"></i>
-        <a href="manageAccounts.html">
-            <img id="image" src="Public/images/logo.png">
+    </a>
+    <a href="index.html">
+        <img id="Public/image" src="Public/images/logo.png">
+    </a>
+    <div class="topBarButtons" id="topBarButton">
+        <a id="user" href="userView.html">
+            <i class="far fa-user-circle"></i>
+            Codecooler
         </a>
-        <div class="topBarButtons" id="topBarButton">
-            <a id="user" href="userView.html">
-                <i class="far fa-user-circle"></i>
-                user
-            </a>
-            <a id="signOut" href="login.html">
-                <i class="fas fa-sign-out-alt"></i>
-                sign out
-            </a>
-        </div>
+        <a id="signOut" href="login.html">
+            <i class="fas fa-sign-out-alt"></i>
+            Log out
+        </a>
+    </div>
 </header>
 
 <div id="content">
