--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
         <input class="inside" class="hide" type="text" name="confirm password" value="Confirm password">
         <button class="inside" class="submit" class="login">Sign in</button>
     </div>
-    <button class="submit" onclick="myFunction()">Sign up</button>
+    <button class="submit">Sign Up<!-- onclick="myFunction()">Sign up--></button>
 </section>
 </body>
 </html>
