added welcome screen and presentation shortcuts

--- a/login.html
+++ b/login.html
@@ -15,6 +15,11 @@
 </head>
 <body>
 <img class="image" src="Public/images/logo.png">
+<p id="shortcuts">
+    <a href="index.html">codecooler</a>
+    <a href="mentorView.html">mentor</a>
+    <a href="manageAccounts.html">creep</a>
+</p>
 <section>
     <input type="text" name="e-mail" value="E-mail address">
     <input type="text" name="password" value="Password">
