--- a/index.html
+++ b/index.html
@@ -20,37 +20,44 @@
 
 <body>
 
-    <header>
-        <a id="hamburgerMenu" href="#" onclick="openSlideMenu()">
-            <i class="fas fa-bars"></i>
+<header>
+
+    <a id="hamburgerMenu" href="#" onclick="openSlideMenu()">
+        <i class="fas fa-bars"></i>
+    </a>
+
+    <a href="index.html">
+        <img id="image" src="Public/images/logo.png">
+    </a>
+
+    <div class="topBarButtons" id="topBarButton">
+        <a id="user" href="userView.html">
+            <i class="far fa-user-circle"></i>
+            Codecooler
         </a>
-            <a href="index.html">
-                <img id="Public/image" src="Public/images/logo.png">
-            </a>
-            <div class="topBarButtons" id="topBarButton">
-                <a id="user" href="userView.html">
-                    <i class="far fa-user-circle"></i>
-                    Codecooler
-                </a>
-                <a id="signOut" href="login.html">
-                    <i class="fas fa-sign-out-alt"></i>
-                    Log out
-                </a>
-            </div>
-    </header>
-
-    <div id="content">
-
-        <div id="menu" class="nav">
-            <a href="#" class="close" onclick="closeSlideMenu()">
-                <i class="fas fa-times"></i>
-            </a>
-            <a href="wallet.html">Wallet</a>
-            <a href="shop.html">Shop</a>
-            <a href="quests.html">Quests</a>
-        </div>
-
+        <a id="signOut" href="login.html">
+            <i class="fas fa-sign-out-alt"></i>
+            Log out
+        </a>
     </div>
+
+</header>
+
+<div id="content">
+
+    <div id="menu" class="nav">
+        <a href="#" class="close" onclick="closeSlideMenu()">
+            <i class="fas fa-times"></i>
+        </a>
+        <a href="wallet.html">Wallet</a>
+        <a href="shop.html">Shop</a>
+        <a href="quests.html">Quests</a>
+    </div>
+
+    <div class="welcome-screen">
+        Welcome screen
+    </div>
+</div>
 
 </body>
 
