--- a/mentorView.html
+++ b/mentorView.html
@@ -9,9 +9,11 @@
     <meta name="keywords" content="Codecool, Quest Store">
     <meta name="author" content="John Doe">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Public/css/mentor-shop.css">
     <link rel="stylesheet" href="Public/css/mentor.css">
+
     <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
     <script src="Public/script.js" defer></script>
 
@@ -24,19 +26,19 @@
     <a id="hamburgerMenu" href="#" onclick="openSlideMenu()">
         <i class="fas fa-bars"></i>
     </a>
-        <a href="index.html">
-            <img id="image" src="Public/images/logo.png">
+    <a href="index.html">
+        <img id="image" src="Public/images/logo.png">
+    </a>
+    <div class="topBarButtons" id="topBarButton">
+        <a id="user" href="userView.html">
+            <i class="far fa-user-circle"></i>
+            Codecooler
         </a>
-        <div class="topBarButtons" id="topBarButton">
-            <a id="user" href="userView.html">
-                <i class="far fa-user-circle"></i>
-                user
-            </a>
-            <a id="signOut" href="login.html">
-                <i class="fas fa-sign-out-alt"></i>
-                sign out
-            </a>
-        </div>
+        <a id="signOut" href="login.html">
+            <i class="fas fa-sign-out-alt"></i>
+            Log out
+        </a>
+    </div>
 </header>
 
 <div id="content">
