fixed paths for css files in html

--- a/Public/websiteLogic/index.html
+++ b/Public/websiteLogic/index.html
@@ -10,11 +10,11 @@
     <meta name="author" content="John Doe">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="Public/css/style.css">
-    <link rel="stylesheet" href="Public/css/user-view.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/user-view.css">
 
     <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
-    <script src="Public/script.js" defer></script>
+    <script src="../script.js" defer></script>
 
 </head>
 
@@ -27,7 +27,7 @@
     </a>
 
     <a href="index.html">
-        <img id="image" src="Public/images/logo.png">
+        <img id="image" src="../images/logo.png">
     </a>
 
     <div class="topBarButtons" id="topBarButton">
