--- a/Public/websiteLogic/login.html
+++ b/Public/websiteLogic/login.html
@@ -9,12 +9,12 @@
     <meta name="author" content="Mikolaj">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="Public/css/login.css">
-    <script src="Public/script.js" defer></script>
+    <link rel="stylesheet" href="../css/login.css">
+    <script src="../script.js" defer></script>
 </head>
 <body>
 <div class="container">
-<img class="image" src="Public/images/logo.png">
+<img class="image" src="../images/logo.png">
 <form>
     <input type="text" name="e-mail" placeholder="E-mail address" data-my="x">
     <input type="text" name="password" placeholder="Password">
