--- a/Public/websiteLogic/shop.html
+++ b/Public/websiteLogic/shop.html
@@ -10,12 +10,12 @@
     <meta name="author" content="John Doe">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="Public/css/style.css">
-    <link rel="stylesheet" href="Public/css/wallet.css">
-    <link rel="stylesheet" href="Public/css/shop.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/wallet.css">
+    <link rel="stylesheet" href="../css/shop.css">
 
     <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
-    <script src="Public/script.js" defer></script>
+    <script src="../script.js" defer></script>
 
 </head>
 
@@ -26,7 +26,7 @@
         <i class="fas fa-bars"></i>
     </a>
         <a href="index.html">
-            <img id="Public/image" src="Public/images/logo.png">
+            <img id="Public/image" src="../images/logo.png">
         </a>
         <div class="topBarButtons" id="topBarButton">
             <a id="user" href="userView.html">
@@ -58,7 +58,7 @@
                 <div class="price-tag">
                     2.5$
                 </div>
-                <img src="Public/images/photo.png">
+                <img src="../images/photo.png">
                 <h2>Name of artifact</h2>
                 <div class="description">
                     Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
@@ -70,7 +70,7 @@
                 <div class="price-tag">
                     11$
                 </div>
-                <img src="Public/images/photo.png">
+                <img src="../images/photo.png">
                 <h2>Name of artifact</h2>
                 <div class="description">
                     Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
@@ -82,7 +82,7 @@
                 <div class="price-tag">
                     199$
                 </div>
-                <img src="Public/images/photo.png">
+                <img src="../images/photo.png">
                 <h2>Name of artifact</h2>
                 <div class="description">
                     Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
@@ -94,7 +94,7 @@
                 <div class="price-tag">
                     2$
                 </div>
-                <img id="artifact-photo" src="Public/images/photo.png">
+                <img id="artifact-photo" src="../images/photo.png">
                 <h2>Name of artifact</h2>
                 <div class="description">
                     Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
