--- a/Public/websiteLogic/mentor-store.html
+++ b/Public/websiteLogic/mentor-store.html
@@ -10,10 +10,10 @@
     <meta name="author" content="John Doe">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="Public/css/mentor.css">
-    <link rel="stylesheet" href="Public/css/shop.css">
+    <link rel="stylesheet" href="../css/mentor.css">
+    <link rel="stylesheet" href="../css/shop.css">
     <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
-    <script src="Public/script.js" defer></script>
+    <script src="../script.js" defer></script>
 
 
 </head>
@@ -25,7 +25,7 @@
         <i class="fas fa-bars"></i>
     </a>
     <a href="index.html">
-        <img id="image" src="Public/images/logo.png">
+        <img id="image" src="../images/logo.png">
     </a>
     <div class="topBarButtons" id="topBarButton">
         <a id="user" href="userView.html">
@@ -62,7 +62,7 @@
                 <div class="price-tag">
                     2.5$
                 </div>
-                <img src="Public/images/photo.png">
+                <img src="../images/photo.png">
                 <h2>Name of artifact</h2>
                 <div class="description">
                     Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
@@ -74,7 +74,7 @@
                 <div class="price-tag">
                     11$
                 </div>
-                <img src="Public/images/photo.png">
+                <img src="../images/photo.png">
                 <h2>Name of artifact</h2>
                 <div class="description">
                     Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
@@ -86,7 +86,7 @@
                 <div class="price-tag">
                     199$
                 </div>
-                <img src="Public/images/photo.png">
+                <img src="../images/photo.png">
                 <h2>Name of artifact</h2>
                 <div class="description">
                     Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
@@ -98,7 +98,7 @@
                 <div class="price-tag">
                     2$
                 </div>
-                <img id="artifact-photo" src="Public/images/photo.png">
+                <img id="artifact-photo" src="../images/photo.png">
                 <h2>Name of artifact</h2>
                 <div class="description">
                     Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
