--- a/Public/websiteLogic/mentorView.html
+++ b/Public/websiteLogic/mentorView.html
@@ -11,11 +11,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="Public/css/mentor-shop.css">
-    <link rel="stylesheet" href="Public/css/mentor.css">
+    <link rel="stylesheet" href="../css/mentor-shop.css">
+    <link rel="stylesheet" href="../css/mentor.css">
 
     <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
-    <script src="Public/script.js" defer></script>
+    <script src="../script.js" defer></script>
 
 
 </head>
@@ -27,7 +27,7 @@
         <i class="fas fa-bars"></i>
     </a>
     <a href="index.html">
-        <img id="image" src="Public/images/logo.png">
+        <img id="image" src="../images/logo.png">
     </a>
     <div class="topBarButtons" id="topBarButton">
         <a id="user" href="userView.html">
