--- a/Public/websiteLogic/quests.html
+++ b/Public/websiteLogic/quests.html
@@ -9,19 +9,13 @@
     <meta name="author" content="John Doe">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="Public/css/style.css">
-    <link rel="stylesheet" href="Public/css/wallet.css">
-    <link rel="stylesheet" href="Public/css/quests.css">
-    <link rel="stylesheet" href="Public/css/shop.css">
-
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/wallet.css">
+    <link rel="stylesheet" href="../css/quests.css">
+    <link rel="stylesheet" href="../css/shop.css">
 
     <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
-    <script src="script.js" defer></script>
-            <link rel="stylesheet" href="Public/css/style.css">
-            <link rel="stylesheet" href="Public/css/wallet.css">
-            <link rel="stylesheet" href="Public/css/quests.css">
-
-    <script src="Public/script.js" defer></script>
+    <script src="../script.js" defer></script>
 </head>
 
 <body>
@@ -31,7 +25,7 @@
         <i class="fas fa-bars"></i>
     </a>
     <a href="index.html">
-        <img id="image" src="Public/images/logo.png" alt="">
+        <img id="image" src="../images/logo.png" alt="">
     </a>
     <div class="topBarButtons" id="topBarButton">
         <a id="user" href="userView.html">
@@ -63,7 +57,7 @@
                 <div class="price-tag">
                     9$
                 </div>
-                <img src="Public/images/photo.png">
+                <img src="../images/photo.png">
                 <h2>Name of quest</h2>
                 <div class="description">
                     Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
@@ -75,7 +69,7 @@
                 <div class="price-tag">
                     2$
                 </div>
-                <img src="Public/images/photo.png" alt="">
+                <img src="../images/photo.png" alt="">
                 <h2>Name of quest</h2>
                 <div class="description">
                     Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
@@ -87,7 +81,7 @@
                 <div class="price-tag">
                     100$
                 </div>
-                <img src="Public/images/photo.png">
+                <img src="../images/photo.png">
                 <h2>Name of quest</h2>
                 <div class="description">
                     Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
@@ -99,7 +93,7 @@
                 <div class="price-tag">
                     22$
                 </div>
-                <img src="Public/images/photo.png" alt="">
+                <img src="../images/photo.png" alt="">
                 <h2>Name of quest</h2>
                 <div class="description">
                     Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
