--- a/Public/websiteLogic/wallet.html
+++ b/Public/websiteLogic/wallet.html
@@ -9,10 +9,10 @@
         <meta name="keywords" content="Codecool, Quest Store">
         <meta name="author" content="John Doe">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="Public/css/style.css">
-        <link rel="stylesheet" href="Public/css/wallet.css">
+        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/wallet.css">
         <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
-        <script src="Public/script.js" defer></script>
+        <script src="../script.js" defer></script>
 
     </head>
 
@@ -23,7 +23,7 @@
                 <i class="fas fa-bars"></i>
             </a>
             <a href="index.html">
-                <img id="Public/image" src="Public/images/logo.png">
+                <img id="Public/image" src="../images/logo.png">
             </a>
             <div class="topBarButtons" id="topBarButton">
                 <a id="user" href="userView.html">
@@ -60,7 +60,7 @@
 
                 <div class="cards-container">
                     <div class="artifact-card">
-                        <img src="Public/images/photo.png">
+                        <img src="../images/photo.png">
                         <h2>Name of artifact</h2>
                         <div class="description">
                             Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
@@ -69,7 +69,7 @@
                         </div>
                     </div>
                     <div class="artifact-card">
-                        <img src="Public/images/photo.png">
+                        <img src="../images/photo.png">
                         <h2>Name of artifact</h2>
                         <div class="description">
                             Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                     <div class="artifact-card">
-                        <img src="Public/images/photo.png">
+                        <img src="../images/photo.png">
                         <h2>Name of artifact</h2>
                         <div class="description">
                             Maecenas tincidunt tortor in enim mollis, vel blandit mauris tincidunt. Maecenas commodo ut nunc
