--- a/Public/websiteLogic/webClasses.html
+++ b/Public/websiteLogic/webClasses.html
@@ -10,10 +10,10 @@
     <meta name="author" content="John Doe">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="Public/css/style.css">
-    <link rel="stylesheet" href="Public/css/creep.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/creep.css">
     <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
-    <script src="Public/script.js" defer></script>
+    <script src="../script.js" defer></script>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
             <i class="fas fa-bars"></i>
         </a>
         <a href="index.html">
-            <img id="Public/image" src="Public/images/logo.png">
+            <img id="Public/image" src="../images/logo.png">
         </a>
         <div class="topBarButtons" id="topBarButton">
             <a id="user" href="userView.html">
