auto refreshing amount of mentors

--- a/Public/websiteLogic/mentors.html
+++ b/Public/websiteLogic/mentors.html
@@ -33,7 +33,7 @@
             <span class="edit-row"><a href="#!"><i class="far fa-edit"></i></a></span>
           </td>
           <td>
-            <button type="button">Remove</button>
+            <button type="button" class="removeButton">Remove</button>
           </td>
     </tr>
 </template>
