--- a/back-end/src/Public/websiteLogic/login.html
+++ b/back-end/src/Public/websiteLogic/login.html
@@ -17,11 +17,11 @@
 <div class="container">
 <img class="image" src="../images/logo.png">
 <form id="login-form">
-    e-mail: <input type="text" name="e-mail" placeholder="E-mail address" data-my="x">
-    password: <input type="text" name="password" placeholder="Password">
-    <!--<input class="inside" class="hide" type="text" name="confirm_password" placeholder="Confirm password">-->
-    <button class="inside" class="submit" class="login">Sign in</button>
-    <button class="submit">Sign Up</button>
+    <input type="text" name="email" placeholder="E-mail address" data-my="x">
+    <input type="text" name="password" placeholder="Password">
+<!--    <input class="inside" class="hide" type="text" name="confirm_password" placeholder="Confirm password">-->
+<!--    <button class="inside" class="submit" class="login">Sign in</button>-->
+    <button>Sign Up</button>
 </form>
 </div>
 <!--<p id="shortcuts">
