fully working editing and adding mentors via html file

--- a/Public/websiteLogic/mentors.html
+++ b/Public/websiteLogic/mentors.html
@@ -37,7 +37,7 @@
                       <tr class="editTable">
                         <td class="editCells" id="edit-name">name</td>
                         <td class="editCells" id="edit-surname">surname</td>
-                        <td class="editCells" id="edit-email">email</td>
+                        <td class="editCells" id="edit-mail">email</td>
                         <td class="editCells" id="edit-phone">phone</td>
                       </tr>
                     </table>
