front side of editing and adding mentors done

--- a/Public/websiteLogic/mentors.html
+++ b/Public/websiteLogic/mentors.html
@@ -20,7 +20,7 @@
 
 <body>
 
-<template id="mentor-template">
+<template class="mentor-template">
     <tr>
           <td class="name"></td>
           <td class="surname"></td>
