html student fixed

--- a/back-end/src/Public/websiteLogic/students.html
+++ b/back-end/src/Public/websiteLogic/students.html
@@ -78,7 +78,7 @@
         <a href="classes.html">Classes</a>
     </div>
 </div>
-<a href="mentors.html" class="button">Students -></a>
+<a href="mentors.html" class="button">Mentors -></a>
 <br><div class="card">
     <h3><strong>Students</strong></h3>
     <div class="card-body">
