--- a/back-end/src/Public/websiteLogic/mentorView.html
+++ b/back-end/src/Public/websiteLogic/mentorView.html
@@ -11,10 +11,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
-<!--    <link rel="stylesheet" href="../css/mentor-shop.css">-->
-    <link rel="stylesheet" href="../css/mentor.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/user-view.css">
 
     <script src="https://kit.fontawesome.com/bd5d5911de.js" crossorigin="anonymous"></script>
+    <script src="../profileScript.js" defer></script>
     <script src="../script.js" defer></script>
 
 
@@ -42,7 +43,22 @@
 </header>
 
 <div id="content">
+<div class="card-container">
+    <img
+            class="round"
+            src="https://randomuser.me/api/portraits/women/79.jpg"
+            alt="user"
+    />
+    <h3 class="name"></h3>
+    <h2 class="surname"></h2>
+    <h3 class="phone"></h3>
+    <p>
+        Status: mentor <br/>
+    </p>
+    <p class="email"></p>
+    <button class="password">change password</button>
 
+</div>
 
 </div>
 
@@ -50,7 +66,7 @@
     <a href="#" class="close" onclick="closeSlideMenu()">
         <i class="fas fa-times"></i>
     </a>
-    <a href="mentor-student.html">Students</a>
+    <a href="students.html">Students</a>
     <a href="mentor-store.html">Store</a>
     <a href="mentor-quests.html">Quests</a>
 </div>
