--- a/back-end/src/Public/websiteLogic/mentorView.html
+++ b/back-end/src/Public/websiteLogic/mentorView.html
@@ -45,8 +45,8 @@
 <div id="content">
 <div class="card-container">
     <img
-            class="round"
-            src="https://randomuser.me/api/portraits/women/79.jpg"
+            class="picture"
+            src="../images/profilePicture.webp"
             alt="user"
     />
     <h3 class="name"></h3>
