--- a/back-end/src/Public/websiteLogic/login.html
+++ b/back-end/src/Public/websiteLogic/login.html
@@ -21,7 +21,7 @@
     <input type="text" name="password" placeholder="Password">
 <!--    <input class="inside" class="hide" type="text" name="confirm_password" placeholder="Confirm password">-->
 <!--    <button class="inside" class="submit" class="login">Sign in</button>-->
-    <button>Sign Up</button>
+    <button>SIGN IN</button>
 </form>
 </div>
 <!--<p id="shortcuts">
